--- a/news/templates/news/home.html
+++ b/news/templates/news/home.html
@@ -5,13 +5,34 @@
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 </head>
 <body>
-	<div class="jumbotron">
-		<h1>DataFlair News Aggregator</h1>
-		<form method="POST" action="{% url 'scrape' %}">
-			{% csrf_token %}
-			<button type="submit" class="btn btn-success">Get my morning news</button>
-		</form>
+<div class="container-fluid">
+	<div class="row">
+		<div class="col-sm-11">
+			<div class="jumbotron fluid">
+			<h1>My Own News Aggregator</h1>
+			<form method="POST" action="{% url 'scrape' %}">
+				{% csrf_token %}
+				<button type="submit" class="btn btn-success">Get Your Morning news</button>
+			</form>
+			<marquee behavior="" direction="">
+				<p>Updated on!!</p>{{dt}}
+			</marquee>
+			</div>
+		</div>
+		<div class="col-sm-1 jumbotron bg bg-warning">
+		<small>
+			<a href="{% url 'login' %}">Login Admin</a>
+		</small>
+		</div>
 	</div>
+</div>
+
+	
+
+
+
+
+
   <div class="card-columns" style="padding: 10px; margin: 20px;">
 	{% for object in object_list %}
 	<div class="card" style="width: 18rem;border:5px black solid;">
@@ -29,8 +50,12 @@
 	src="http://code.jquery.com/jquery-3.3.1.min.js"
 	integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
 	crossorigin="anonymous"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" 
+	integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+	 crossorigin="anonymous"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" 
+	integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" 
+	crossorigin="anonymous"></script>
 </body>
 </html>
 
